# pplx-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
pplx_cli/: api.py  chat_history.py  cli.py  config.py  main.py  notes.py
pplx_cli/knowledge_graph/: __init__.py  parser.py  server.py  template.py  visualizer.py
pplx_cli/migrations/: __init__.py  migrate_to_rag.py
pplx_cli/rag/: __init__.py  database.py  embeddings.py  indexer.py  search.py
scripts/: demo-knowledge-graph.sh
tests/: test_api.py  test_chat_history.py  test_cli.py  test_config.py  test_knowledge_graph.py  test_notes.py  test_rag_database.py  test_rag_embeddings.py  test_rag_indexer.py  test_rag_search.py
